--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>home</title>
+   <title>Home</title>
+
+   <script src="function.js" defer type="module"></script>
 
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
@@ -23,30 +25,32 @@
 
       <section class="flex">
 
-         <a href="home.html" class="logo">Foods</a>
+         <a href="index.html" class="logo">foodshop - LpSion</a>
 
          <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#abt">About</a>
-            <a href="#food">Menu</a>
-            <a href="#home" onclick="checkUserLoginC('orders.html')">Orders</a>
+            <a href="index.html">home</a>
+            <a href="menu.html">menu</a>
+            <a id="ordersBtn" style="cursor: pointer;">orders</a>
          </nav>
 
          <div class="icons">
-            <a href="#" onclick="checkUserLoginC('cart.html')"><i class="fas fa-shopping-cart"></i><span>(3)</span></a>
+            <a><i class="fas fa-search"></i></a>
+            <a id="cartBtn"><i class="fas fa-shopping-cart"></i><span>(
+                  0 )
+               </span></a>
             <div id="user-btn" class="fas fa-user"></div>
             <div id="menu-btn" class="fas fa-bars"></div>
          </div>
 
          <div class="profile">
-            <p class="name">Please Login First!</p>
-            <div class="userl">
-               <a href="login.html" class="btn">Login</a>
+            <div id="loginprofile">
+               
             </div>
 
-            <div class="flex">
-               <a href="profile.html" class="btn">profile</a>
-               <a href="#" onclick="logout()" class="delete-btn">logout</a>
+            <!-- <a id="loginbtn" class="btn">login</a> or -->
+            <!-- <a id="registerbtn" class="btn">register</a> -->
+            <div id="infoprofile">
+               
             </div>
          </div>
 
@@ -55,28 +59,56 @@
    </header>
 
 
-   <section class="home" id="home">
+   <section class="hero">
 
-      <div class="swiper home-slider">
+      <div class="swiper hero-slider">
 
          <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
                <div class="content">
-                  <span>Order Online</span>
-                  <h3>Delicious Pizza</h3>
-                  <a href="#food" class="btn">See Menu</a>
+                  <span>order online</span>
+                  <h3>delicious pizza</h3>
+                  <a href="menu.html" class="btn">see menus</a>
                </div>
                <div class="image">
                   <img src="images/home-img-1.png" alt="">
                </div>
             </div>
 
+            <div class="swiper-slide slide">
+               <div class="content">
+                  <span>order online</span>
+                  <h3>chezzy hamburger</h3>
+                  <a href="menu.html" class="btn">see menus</a>
+               </div>
+               <div class="image">
+                  <img src="images/home-img-2.png" alt="">
+               </div>
+            </div>
+
+            <div class="swiper-slide slide">
+               <div class="content">
+                  <span>order online</span>
+                  <h3>rosted chicken</h3>
+                  <a href="menu.html" class="btn">see menus</a>
+               </div>
+               <div class="image">
+                  <img src="images/home-img-3.png" alt="">
+               </div>
+            </div>
+
          </div>
+
+         <div class="swiper-pagination"></div>
+
+      </div>
 
    </section>
 
-   <section class="about" id="abt">
+   <!-- about section starts  -->
+
+   <section class="about">
 
       <div class="row">
 
@@ -85,38 +117,64 @@
          </div>
 
          <div class="content">
-
-            <h3>About Us ?</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis non odit nihil, doloremque sunt aut
-               placeat culpa. Adipisci minima, neque necessitatibus incidunt nemo eveniet mollitia quis facere vel
-               consectetur culpa?</p>
-            <a href="#food" class="btn">Our Menu</a>
+            <h3>why choose us?</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, neque debitis incidunt qui ipsum sed
+               doloremque a molestiae in veritatis ullam similique sunt aliquam dolores dolore? Quasi atque debitis
+               nobis!</p>
+            <a href="menu.html" class="btn">our menu</a>
          </div>
 
       </div>
 
    </section>
 
+   <!-- about section ends -->
 
+   <section class="steps">
 
-
-   <section class="category" id="category">
-
-      <h1 class="title">Food Category</h1>
+      <h1 class="title">simple steps</h1>
 
       <div class="box-container">
 
-         <a href="#category" class="box">
+         <div class="box">
+            <img src="images/step-1.png" alt="">
+            <h3>choose order</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+         </div>
+
+         <div class="box">
+            <img src="images/step-2.png" alt="">
+            <h3>fast delivery</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+         </div>
+
+         <div class="box">
+            <img src="images/step-3.png" alt="">
+            <h3>enjoy food</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+         </div>
+
+      </div>
+
+   </section>
+
+   <section class="category">
+
+      <h1 class="title">food category</h1>
+
+      <div class="box-container">
+
+         <a class="box">
             <img src="images/cat-1.png" alt="">
-            <h3>Fast Food</h3>
+            <h3>Food</h3>
          </a>
 
-         <a href="#category" class="box">
+         <a class="box">
             <img src="images/cat-3.png" alt="">
             <h3>Drinks</h3>
          </a>
 
-         <a href="#category" class="box">
+         <a class="box">
             <img src="images/cat-4.png" alt="">
             <h3>Desserts</h3>
          </a>
@@ -125,69 +183,179 @@
 
    </section>
 
-   <section class="products" id="food">
+   <section class="products">
 
-      <h1 class="title">Menu</h1>
+      <h1 class="title">latest dishes</h1>
 
       <div class="box-container">
-
-         <div class="box">
-            <a class="fas fa-eye"></a>
-            <button class="fas fa-shopping-cart" type="submit" onclick="test()"></button>
-            <img src="uploaded_img/pizza-1.png" alt="">
-            <a href="category.html" class="cat">fast food</a>
-            <div class="name">delicious pizza 01</div>
-            <div class="flex">
-               <div class="price"><span>RM</span>3<span>/-</span></div>
+         <form action="" method="post" class="box">
+            <input type="hidden" name="pid" value="<?= $fetch_products['id']; ?>">
+            <input type="hidden" name="name" value="<?= $fetch_products['name']; ?>">
+            <input type="hidden" name="price" value="<?= $fetch_products['price']; ?>">
+            <input type="hidden" name="image" value="<?= $fetch_products['image']; ?>">
+            <a href="quick_view.php?pid=<?= $fetch_products['id']; ?>" class="fas fa-eye"></a>
+            <button type="submit" class="fas fa-shopping-cart" name="add_to_cart"></button>
+            <img src="uploaded_img/<?= $fetch_products['image']; ?>" alt="">
+            <a href="category.php?category=<?= $fetch_products['category']; ?>" class="cat">
+               <?= $fetch_products['category']; ?>
+            </a>
+            <div class="name">
+               <?= $fetch_products['name']; ?>
             </div>
-         </div>
-
-         <div class="box">
-            <a class="fas fa-eye"></a>
-            <button class="fas fa-shopping-cart" type="submit" onclick="test()"></button>
-            <img src="uploaded_img/dish-1.png" alt="">
-            <a href="category.html" class="cat">dishes</a>
-            <div class="name">main dish 01</div>
             <div class="flex">
-               <div class="price"><span>RM</span>3<span>/-</span></div>
+               <div class="price"><span>$</span>
+                  <?= $fetch_products['price']; ?>
+               </div>
+               <input type="number" name="qty" class="qty" min="1" max="99" value="1" maxlength="2">
             </div>
-         </div>
+         </form>
 
+      </div>
+
+      <div class="more-btn">
+         <a href="menu.html" class="btn">veiw all</a>
       </div>
 
    </section>
 
-   <section class="steps">
+   <!-- reviews section starts  -->
 
-      <h1 class="title">3 simple steps</h1>
+   <!-- <section class="reviews">
 
-      <div class="box-container">
+      <h1 class="title">customer's reivews</h1>
 
-         <div class="box">
-            <img src="images/step-1.png" alt="">
-            <h3>select food</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, hic.</p>
+      <div class="swiper reviews-slider">
+
+         <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-1.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-2.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-3.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-4.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-5.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
+            <div class="swiper-slide slide">
+               <img src="images/pic-6.png" alt="">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate eligendi laborum molestias ut
+                  earum nulla sint voluptatum labore nemo.</p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+               <h3>john deo</h3>
+            </div>
+
          </div>
 
-         <div class="box">
-            <img src="images/step-2.png" alt="">
-            <h3>30 minutes delivery</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, hic.</p>
-         </div>
-
-         <div class="box">
-            <img src="images/step-3.png" alt="">
-            <h3>enjoy food!</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, hic.</p>
-         </div>
+         <div class="swiper-pagination"></div>
 
       </div>
 
-   </section>
+   </section> -->
+
+   <!-- reviews section ends -->
+
 
    <footer class="footer">
 
-      <div class="credit">&copy; copyright @ 2022 by <span>my team</span> | all rights reserved!</div>
+      <!-- <section class="grid">
+
+         <div class="box">
+            <img src="images/email-icon.png" alt="">
+            <h3>our email</h3>
+            <a></a>
+            <a></a>
+         </div>
+
+         <div class="box">
+            <img src="images/clock-icon.png" alt="">
+            <h3>opening hours</h3>
+            <p></p>
+         </div>
+
+         <div class="box">
+            <img src="images/map-icon.png" alt="">
+            <h3>our address</h3>
+            <a href="#"></a>
+         </div>
+
+         <div class="box">
+            <img src="images/phone-icon.png" alt="">
+            <h3>our number</h3>
+            <a></a>
+            <a></a>
+         </div>
+
+      </section> -->
+
+      <div class="credit">&copy; copyright @ 2025 by <span>LpSion</span> | all rights reserved!</div>
 
    </footer>
 
@@ -195,14 +363,24 @@
       <img src="images/loader.gif" alt="">
    </div>
 
-   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
-   <script src="SystemFunctionMain.js"></script>
+   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+   <!-- custom js file link  -->
    <script src="script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
    <script>
-      checkUserLogin()
+
+      var swiper = new Swiper(".hero-slider", {
+         loop: true,
+         grabCursor: true,
+         effect: "flip",
+         pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+         },
+      });
+
    </script>
 
 </body>
