--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Home</title>
 
-   <script src="function.js" defer type="module"></script>
+   <script src="scripts/index.js" defer type="module"></script>
 
    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
@@ -29,7 +29,7 @@
 
          <nav class="navbar">
             <a href="index.html">home</a>
-            <a href="menu.html">menu</a>
+            <a id="menuBtn" >menu</a>
             <a id="ordersBtn" style="cursor: pointer;">orders</a>
          </nav>
 
@@ -44,13 +44,13 @@
 
          <div class="profile">
             <div id="loginprofile">
-               
+
             </div>
 
             <!-- <a id="loginbtn" class="btn">login</a> or -->
             <!-- <a id="registerbtn" class="btn">register</a> -->
             <div id="infoprofile">
-               
+
             </div>
          </div>
 
@@ -68,8 +68,8 @@
             <div class="swiper-slide slide">
                <div class="content">
                   <span>order online</span>
-                  <h3>delicious pizza</h3>
-                  <a href="menu.html" class="btn">see menus</a>
+                  <h3>AirSarbat</h3>
+                  <a id="seemenu"  class="btn">see menus</a>
                </div>
                <div class="image">
                   <img src="images/home-img-1.png" alt="">
@@ -79,7 +79,7 @@
             <div class="swiper-slide slide">
                <div class="content">
                   <span>order online</span>
-                  <h3>chezzy hamburger</h3>
+                  <h3>Maggi Kari</h3>
                   <a href="menu.html" class="btn">see menus</a>
                </div>
                <div class="image">
@@ -90,7 +90,7 @@
             <div class="swiper-slide slide">
                <div class="content">
                   <span>order online</span>
-                  <h3>rosted chicken</h3>
+                  <h3>Maggi Ayam</h3>
                   <a href="menu.html" class="btn">see menus</a>
                </div>
                <div class="image">
@@ -108,7 +108,7 @@
 
    <!-- about section starts  -->
 
-   <section class="about">
+   <!-- <section class="about">
 
       <div class="row">
 
@@ -118,47 +118,46 @@
 
          <div class="content">
             <h3>why choose us?</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, neque debitis incidunt qui ipsum sed
-               doloremque a molestiae in veritatis ullam similique sunt aliquam dolores dolore? Quasi atque debitis
-               nobis!</p>
+            <p></p>
             <a href="menu.html" class="btn">our menu</a>
          </div>
 
       </div>
 
-   </section>
+   </section> -->
 
    <!-- about section ends -->
 
    <section class="steps">
 
-      <h1 class="title">simple steps</h1>
+      <h1 class="title">Langkah Mudah</h1>
 
       <div class="box-container">
 
          <div class="box">
             <img src="images/step-1.png" alt="">
-            <h3>choose order</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+            <h3>Pilih Pesanan</h3>
+            <p>Tempah sarbat kegemaran dan sesuaikan ikut selera anda.</p>
          </div>
 
          <div class="box">
             <img src="images/step-2.png" alt="">
-            <h3>fast delivery</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+            <h3>Penghantaran Percuma</h3>
+            <p>Penghantaran pantas terus ke lokasi anda. Pastikan anda melengkapkan profil terlebih dahulu dengan nama
+               penuh dan nombor blok untuk memudahkan penghantaran.</p>
          </div>
 
          <div class="box">
             <img src="images/step-3.png" alt="">
-            <h3>enjoy food</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, dolorem.</p>
+            <h3>Nikmati Makanan</h3>
+            <p>Nikmati kesegaran sarbat dan makanan pilihan anda dengan penuh kepuasan.</p>
          </div>
 
       </div>
 
    </section>
 
-   <section class="category">
+   <!-- <section class="category">
 
       <h1 class="title">food category</h1>
 
@@ -181,39 +180,39 @@
 
       </div>
 
-   </section>
+   </section> -->
 
    <section class="products">
 
-      <h1 class="title">latest dishes</h1>
+      <h1 class="title">Menu Terkini</h1>
 
       <div class="box-container">
-         <form action="" method="post" class="box">
-            <input type="hidden" name="pid" value="<?= $fetch_products['id']; ?>">
-            <input type="hidden" name="name" value="<?= $fetch_products['name']; ?>">
-            <input type="hidden" name="price" value="<?= $fetch_products['price']; ?>">
-            <input type="hidden" name="image" value="<?= $fetch_products['image']; ?>">
-            <a href="quick_view.php?pid=<?= $fetch_products['id']; ?>" class="fas fa-eye"></a>
-            <button type="submit" class="fas fa-shopping-cart" name="add_to_cart"></button>
-            <img src="uploaded_img/<?= $fetch_products['image']; ?>" alt="">
-            <a href="category.php?category=<?= $fetch_products['category']; ?>" class="cat">
-               <?= $fetch_products['category']; ?>
+         <div class="box">
+            <input type="hidden" name="pid" value="">
+            <input type="hidden" name="name" value="">
+            <input type="hidden" name="price" value="">
+            <input type="hidden" name="image" value="">
+            <a id="zoomimg" class="fas fa-eye"></a>
+            <button id="addcart" type="submit" class="fas fa-shopping-cart" name="add_to_cart"></button>
+            <img src="/images/home-img-2.png" alt="">
+            <a href="" class="cat">
+               Mee Instant
             </a>
             <div class="name">
-               <?= $fetch_products['name']; ?>
+               Maggi Kari
             </div>
             <div class="flex">
                <div class="price"><span>$</span>
-                  <?= $fetch_products['price']; ?>
+                  6.00
                </div>
                <input type="number" name="qty" class="qty" min="1" max="99" value="1" maxlength="2">
             </div>
-         </form>
+         </div>
 
       </div>
 
       <div class="more-btn">
-         <a href="menu.html" class="btn">veiw all</a>
+         <a id="viewallBtn" class="btn">veiw all</a>
       </div>
 
    </section>
@@ -366,7 +365,7 @@
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="script.js"></script>
+   <script src="/scripts/script.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
    <script>
