--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="/scripts/script.js"></script>
+   <script src="scripts/script.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
    <script>
@@ -383,5 +383,6 @@
    </script>
 
 </body>
+
 
 </html>
