--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <input type="hidden" name="image" value="">
             <a id="zoomimg" class="fas fa-eye"></a>
             <button id="addcart" type="submit" class="fas fa-shopping-cart" name="add_to_cart"></button>
-            <img src="/images/home-img-2.png" alt="">
+            <img src="images/home-img-2.png" alt="">
             <a href="" class="cat">
                Mee Instant
             </a>
@@ -386,3 +386,4 @@
 
 
 </html>
+
