--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,84 +10,42 @@
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
+
    <!-- custom css file link  -->
+   <script src="scripts/cart.js" defer type="module"></script>
    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-   
-<!-- header section starts  -->
 
-<!-- header section ends -->
+   <div class="heading">
+      <h3>shopping cart</h3>
+      <p><a href="index.html">home</a> <span> / cart</span></p>
+   </div>
 
-<div class="heading">
-   <h3>shopping cart</h3>
-   <p><a href="index.html">home</a> <span> / cart</span></p>
-</div>
+   <section class="products">
 
-<!-- shopping cart section starts  -->
+      <h1 class="title">your cart</h1>
 
-<section class="products">
+      <div id="containerBox" class="box-container"></div>
 
-   <h1 class="title">your cart</h1>
-
-   <div class="box-container">
-
-      <form action="" method="post" class="box">
-         <input type="hidden" name="cart_id" value="<?= $fetch_cart['id']; ?>">
-         <a href="quick_view.php?pid=<?= $fetch_cart['pid']; ?>" class="fas fa-eye"></a>
-         <button type="submit" class="fas fa-times" name="delete" onclick="return confirm('delete this item?');"></button>
-         <img src="uploaded_img/<?= $fetch_cart['image']; ?>" alt="">
-         <div class="name"><?= $fetch_cart['name']; ?></div>
-         <div class="flex">
-            <div class="price"><span>$</span><?= $fetch_cart['price']; ?></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="<?= $fetch_cart['quantity']; ?>" maxlength="2">
-            <button type="submit" class="fas fa-edit" name="update_qty"></button>
+      <div class="more-btn">
+         <div>
+            <button onclick="cartAllDelete()" type="submit" class="delete-btn" name="delete_all" onclick="">delete all</button>
          </div>
-         <div class="sub-total"> sub total : <span>$<?= $sub_total = ($fetch_cart['price'] * $fetch_cart['quantity']); ?>/-</span> </div>
-      </form>
+      </div>
 
+      <div class="cart-total">
+         <p>cart total : <span id="cartTotalAll"></span></p>
+         <a href="checkout.html" class="btn">proceed to checkout</a>
+      </div>
 
-   </div>
+   </section>
 
-   <div class="cart-total">
-      <p>cart total : <span>$<?= $grand_total; ?></span></p>
-      <a href="checkout.php" class="btn <?= ($grand_total > 1)?'':'disabled'; ?>">proceed to checkout</a>
-   </div>
-
-   <div class="more-btn">
-      <form action="" method="post">
-         <button type="submit" class="delete-btn <?= ($grand_total > 1)?'':'disabled'; ?>" name="delete_all" onclick="return confirm('delete all from cart?');">delete all</button>
-      </form>
-      <a href="menu.php" class="btn">continue shopping</a>
-   </div>
-
-</section>
-
-<!-- shopping cart section ends -->
-
-
-
-
-
-
-
-
-
-
-<!-- footer section starts  -->
-
-<!-- footer section ends -->
-
-
-
-
-
-
-
-
-<!-- custom js file link  -->
-<script src="script.js"></script>
+   <!-- custom js file link  -->
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
+
 </html>
