--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,7 @@
 
 <div class="heading">
    <h3>checkout</h3>
-   <p><a href="home.php">home</a> <span> / checkout</span></p>
+   <p><a href="index.html">home</a> <span> / checkout</span></p>
 </div>
 
 <section class="checkout">
@@ -91,4 +91,5 @@
 <script src="script.js"></script>
 
 </body>
+
 </html>
