--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <a href="#product" class="btn">see menus</a>
                </div>
                <div class="image">
-                  <img src="images/home-img-1.png" alt="">
+                  <img src="images/home-img-1.jpg" alt="">
                </div>
             </div>
 
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
